--- a/force-app/main/default/layouts/Summit_Events_Instance__c-UG Event Instance Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Instance__c-UG Event Instance Layout.layout-meta.xml
@@ -152,7 +152,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Event_Instance_Fee_Index__c</field>
+                <field>Event_Instance_Fee_Attribute__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -162,7 +162,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Event_Instance_Fee_Additional_Index__c</field>
+                <field>Event_Instance_Fee_Additional_Attribute__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
@@ -259,7 +259,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h3F000001rRRI</masterLabel>
+        <masterLabel>00h3D00000116rT</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>2</sizeY>
         <summaryLayoutItems>
