--- a/force-app/main/default/layouts/Summit_Events__c-Graduate Event Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events__c-Graduate Event Layout.layout-meta.xml
@@ -143,7 +143,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Event_Fee_Index__c</field>
+                <field>Event_Fee_Attribute__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -153,7 +153,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Event_Fee_Additional_Index__c</field>
+                <field>Event_Fee_Additional_Attribute__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
@@ -520,7 +520,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h3F000001rRRD</masterLabel>
+        <masterLabel>00h3D00000116r9</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
