--- a/force-app/main/default/layouts/Summit_Events__c-UG Event Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events__c-UG Event Layout.layout-meta.xml
@@ -152,7 +152,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Event_Fee_Index__c</field>
+                <field>Event_Fee_Attribute__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -162,7 +162,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Event_Fee_Additional_Index__c</field>
+                <field>Event_Fee_Additional_Attribute__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
@@ -546,7 +546,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h3F000001rRRL</masterLabel>
+        <masterLabel>00h3D00000116rW</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
