registraiton page converted to slds. started record type removal

--- a/force-app/main/default/layouts/Summit_Events__c-Graduate Event Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events__c-Graduate Event Layout.layout-meta.xml
@@ -102,6 +102,10 @@
                 <behavior>Edit</behavior>
                 <field>Ask_Date_Of_Birth__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Ask_Relationship_To_Institution__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -493,7 +497,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h3F000001NPZG</masterLabel>
+        <masterLabel>00h2F000000uUUx</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
