--- a/force-app/main/default/pages/SummitEvents.page
+++ b/force-app/main/default/pages/SummitEvents.page
@@ -9,29 +9,14 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
     <apex:composition template="CastorTemplate2017">
         <apex:define name="metaPageTitle">Summit Events</apex:define>
         <apex:define name="pageTitle"><a href="/SummitEvents">Events</a></apex:define>
-        <apex:define name="afterJquery">
+        <apex:define name="scriptsHead">
             <link href="{!URLFOR($Resource.SummitEventsAssets, '/css/main.css')}" rel="stylesheet" type="text/css"/>
             <link href="{!URLFOR($Resource.SummitEventsAssets, '/fullcalendar/fullcalendar-ust.css')}" rel="stylesheet" type="text/css"/>
             <script src="{!URLFOR($Resource.SummitEventsAssets, '/js/eventList.js')}"/>
             <script type="text/javascript" src="{!URLFOR($Resource.SummitEventsAssets, '/fullcalendar/moment.min.js')}"></script>
             <script type="text/javascript" src="{!URLFOR($Resource.SummitEventsAssets, '/fullcalendar/fullcalendar.min.js')}"></script>
         </apex:define>
-        <apex:define name="sectionNav">
-            <!--
-            <li>
-                <apex:outputLink value="{!$Page.Home_Page}">Home</apex:outputLink>
-            </li>
-            <li>
-                <apex:outputLink value="{!$Page.ScholarshipHome}">Scholarship List</apex:outputLink>
-            </li>
-            <li>
-                <apex:outputLink value="{!$Page.MyProfile}">My Profile</apex:outputLink>
-            </li>
-            <li>
-                <apex:outputLink value="{!$Page.MyApplication}">My Applications</apex:outputLink>
-            </li>
-            -->
-        </apex:define>
+        <apex:define name="sectionNav"/>
         <apex:define name="body">
             <div class="row">
                 <div class="columns errorMessages">
