--- a/force-app/main/default/pages/SummitEventsConfirmation.page
+++ b/force-app/main/default/pages/SummitEventsConfirmation.page
@@ -13,16 +13,14 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
             - Confirmation
         </apex:define>
         <apex:define name="pageTitle"><a href="{!eventPage.Event_Home_Link_URL__c}">{!eventPage.Event_Home_Link_Title__c}</a></apex:define>
-        <apex:define name="afterJquery">
+        <apex:define name="scriptsHead">
 
             <script>
                 dataLayer = [{
                     <!--'school': '{!eventPage.School__r.Name}',-->
-                    'recordType': '{!eventPage.RecordType.Name}',
                     'eventlabel':'{!eventPage.Event_Name__c}'
                     //'startDate': '{!evtInstance.Start_Date_Time__c}',
                    // 'location':'{}'
-
                 }];
             </script>
 
