--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -43,26 +43,28 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                     </apex:actionFunction>
 
                     <!-- Event Description -->
-                    <div class="slds-col slds-p-around_x-small slds-size_1-of-1" style="border:solid 1px green;">
-                        <span class="eventName">{!evtInstance.Event__r.Event_Name__c}</span>
-                        <apex:outputPanel layout="none" rendered="{!!ISBLANK(evtInstance.Instance_Title__c)}">
-                            <span class="bc-spacer"><span>»</span></span>
-                            <span class="eventInstance">{!evtInstance.Instance_Title__c}</span>
-                        </apex:outputPanel>
-                        <apex:outputPanel layout="inline" styleClass="eventDate" rendered="{!IF(!ISBLANK(evtInstance.Start_Date_Time__c) && !ISBLANK(evtInstance.Start_Date_Time__c),true,false)}">
-                            <span class="bc-spacer"><span>»</span></span>
-                            {!eventStartDateTimeCrumb}
-                        </apex:outputPanel>
+                    <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
+                        <nav role="navigation" aria-label="Breadcrumbs">
+                            <ol class="slds-breadcrumb slds-list--horizontal">
+                                <li class="slds-breadcrumb__item slds-text-title--caps"><a href="javascript:void(0);">{!evtInstance.Event__r.Event_Name__c}</a></li>
+                                <apex:outputPanel layout="none" rendered="{!!ISBLANK(evtInstance.Instance_Title__c)}">
+                                    <li class="slds-breadcrumb__item slds-text-title--caps"><a href="javascript:void(0);">{!evtInstance.Instance_Title__c}</a></li>
+                                </apex:outputPanel>
+                                <apex:outputPanel layout="none" styleClass="eventDate" rendered="{!IF(!ISBLANK(evtInstance.Start_Date_Time__c) && !ISBLANK(evtInstance.Start_Date_Time__c),true,false)}">
+                                    <li class="slds-breadcrumb__item slds-text-title--caps"><a href="javascript:void(0);">{!eventStartDateTimeCrumb}</a></li>
+                                </apex:outputPanel>
+                            </ol>
+                        </nav>
                     </div>
                     <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                        <h2>
+                        <h2 class="slds-text-heading_large">
                             <apex:outputText value="{!eventPage.Event_Name__c}"></apex:outputText>
                         </h2>
                     </div>
 
                     <!-- Event is closed message-->
                     <apex:outputPanel styleClass="slds-col slds-p-around_x-small slds-size_1-of-1" rendered="{!eventIsClosed}">
-                        <p>
+                        <p class="slds-text-body">
                             <apex:outputText escape="false" value="{!eventPage.Event_Full_Text__c}"></apex:outputText>
                         </p>
                     </apex:outputPanel>
@@ -97,7 +99,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 <apex:outputPanel layout="block" styleClass="slds-grid slds-wrap" id="parentInfo" rendered="{!IF(newEvtReg.Registrant_Parent_Status__c == 'Other', false, true)}">
 
                                     <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                                        <h3>Parent Information</h3>
+                                        <h3 class="slds-text-heading_medium">Parent Information</h3>
                                     </div>
 
                                     <div class="slds-col slds-p-around_x-small slds-size_1-of-1 slds-medium-size_3-of-6 slds-large-size_3-of-6">
@@ -153,7 +155,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 <apex:outputPanel layout="block" styleClass="slds-grid slds-wrap" rendered="{!IF(newEvtReg.Registrant_Parent_Status__c == 'Other', true, false)}">
 
                                     <div class="cslds-col slds-p-around_x-small slds-size_1-of-1">
-                                        <h3>Your Information</h3>
+                                        <h3 class="slds-text-heading_medium">Your Information</h3>
                                     </div>
 
                                     <div class="slds-col slds-p-around_x-small slds-size_1-of-1 slds-medium-size_3-of-6 slds-large-size_3-of-6">
@@ -213,7 +215,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 </apex:outputPanel>
 
                                 <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                                    <p>Enter the contact information of the student you are registering for this activity below.
+                                    <p class="slds-text-body">Enter the contact information of the student you are registering for this activity below.
                                         <br/><strong><em>Note: it is preferable that the student have a unique email (different than yours) for our records.</em></strong></p>
                                 </div>
 
@@ -223,7 +225,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
 
                         <!-- User logged in to portal message -->
                         <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                            <h3>{!If(eventPage.Ask_If_Parent__c, 'Student', 'Registrant')} Information</h3>
+                            <h3 class="slds-text-heading_medium">{!If(eventPage.Ask_If_Parent__c, 'Student', 'Registrant')} Information</h3>
                             <apex:outputText rendered="{!If(EvtUserType != 'Guest',true,false)}" escape="false">
                                 <p class="errorMessage">You are currently logged into a Portal and therefore your portal information is pre-filled below and cannot be changed.
                                 </p>
@@ -385,7 +387,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         <apex:outputPanel layout="none" rendered="{!eventPage.Ask_Mailing_Address__c}">
 
                             <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                                <h4>Address</h4>
+                                <h4 class="slds-text-heading_small">Address</h4>
                             </div>
 
                             <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
@@ -497,7 +499,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                           , true, false)}">
 
                             <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                                <h4>High School</h4>
+                                <h4 class="slds-text-heading_small">High School</h4>
                             </div>
 
                             <div id="hsAsk" class="slds-grid slds-wrap slds-size_1-of-1">
@@ -543,8 +545,8 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                                   || (eventPage.College_High_School_Ask__c = 'Auto Select on Audience' && (evtInfo.audience = 'Transfer' || evtInfo.audience ='Graduate'))
                                           , true, false)}">
                             <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                                <h4>College</h4>
-                                <p>Please indicate the last college you attended and the last year you attended that college.</p>
+                                <h4 class="slds-text-heading_small">College</h4>
+                                <p class="slds-text-body">Please indicate the last college you attended and the last year you attended that college.</p>
                             </div>
                             <div id="collegeAsk" class="slds-grid slds-wrap slds-size_1-of-1">
                                 <div class="slds-col slds-p-around_x-small slds-size_1-of-1 slds-medium-size_4-of-6 slds-large-size_4-of-6">
@@ -589,7 +591,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         <apex:outputPanel layout="block" id="addInfo" styleClass="slds-grid slds-wrap" rendered="{!additionalQuestions}">
 
                             <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                                <h3>Additional Information</h3>
+                                <h3 class="slds-text-heading_medium">Additional Information</h3>
                             </div>
 
                             <!-- Time frame Question -->
